force-app/main/default/objects/Airline_Level_Change_Notification__e/Airline_Level_Change_Notification__e.object-meta.xml
<CustomObject>
    <description>Notify a cache refresh for QBR travellers</description>
    <label>Airline Level Change Notification</label>
    <pluralLabel>Airline Level Change Notifications</pluralLabel>
</CustomObject>