force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/ABN_Tax_Reference__c.field-meta.xml
<CustomField>
    <fullName>ABN_Tax_Reference__c</fullName>
    <label>ABN_Tax_Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>