force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/Airline_Level__c.field-meta.xml
<CustomField>
    <fullName>Airline_Level__c</fullName>
    <label>Airline_Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>