force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/Aquire_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Membership_Number__c</fullName>
    <label>Aquire_Membership_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>