force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/Indirect_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Discount_Code__c</fullName>
    <label>Indirect_Discount_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>