force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/Primary_Reason_Not_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_Not_Eligible__c</fullName>
    <label>Primary_Reason_Not_Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>