force-app/main/default/objects/Airline_Level_Change_Notification__e/fields/Verified_Customer__c.field-meta.xml
<CustomField>
    <fullName>Verified_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified_Customer</label>
    <type>Checkbox</type>
</CustomField>